--- a/main_ai.ipynb
+++ b/main_ai.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,12 +31,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Detecting Face using OpenCV"
+    "# Detecting Face using OpenCV\n",
+    "First, I'm going to use the pre-trained frontalface haar cascade available through OpenCV in order to identify a face in an image. This is done by loading the image, converting the image to black and white, and then using the classifier to identify the coordinates and size of the face. Then, I use OpenCV to draw a green box around the face."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,8 +75,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since OpenCV uses BGR instead of RGB, I'll need to convert the image back into RGB in order to show it in this notebook."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -104,12 +112,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Adding Eye Detection"
+    "# Adding Eye Detection\n",
+    "Some other pretrained haarcascades available through OpenCV are:\n",
+    "* haarcascade_eye\n",
+    "* haarcascade_fullbody\n",
+    "* haarcascade_license_plate\n",
+    "* haarcascade_lowerbody\n",
+    "* haarcascade_smile\n",
+    "\n",
+    "First, I'm going to use haarcascade_face to identify a face. Then within that face, I'm gong to use the eye_classifier to find the location of both eyes."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,14 +196,14 @@
    "source": [
     "## Define the VGGFace Model\n",
     "The VGG-Face model is a deep facial recognition model which was created in Keras in 2018\n",
-    "Here is the architecture for the VGG Face model. (photo can be found here: https://sefiks.com/2018/08/06/deep-face-recognition-with-keras/)\n",
+    "Here is the architecture for the VGG Face model. (photo can be found [here](https://sefiks.com/2018/08/06/deep-face-recognition-with-keras/))\n",
     "![VGG-Face architecture](img/vgg-face-architecture.jpg) \n",
-    "The model expects 224x224x3 sized input images in RGB colors. The output is a 2622 dimensional vector."
+    "The model expects 224x224x3 sized input images in RGB colors. This is fed through many convolutional and max pooling layers until it is of size 1x1x2622. Finally, it is flattened to generate a 2622 dimension vector representation of a face. Below, I lay out the structure of the VGGFace model and then load the weights of the NN."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,20 +265,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 76,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# the pretrained weights can be downloaded here: \n",
-    "# https://drive.google.com/file/d/1CPSeum3HpopfomUEK1gybeuIVoeJT_Eo/view?usp=sharing\n",
-    "# the weights will not be included in my github project since the file size is too large for github\n",
-    "model.load_weights(os.path.join(par_dir, 'vgg_face_weights.h5'))"
+    "The pretrained weights can be downloaded [here](https://drive.google.com/file/d/1CPSeum3HpopfomUEK1gybeuIVoeJT_Eo/view?usp=sharing). The weights will not be included in my github project since the file size is too large for github."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.load_weights(os.path.join(par_dir, 'vgg_face_weights.h5'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preprocessing the Image\n",
+    "To use VGGFace, I'm first going to preprocess the image using OpenCV. I'll do this by using OpenCV to detect the location of the face, then crop out just the face and resize the face to be 224x224 which is the input size for the VGGFace NN."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,13 +318,19 @@
     "        im = np.expand_dims(im, axis=0)\n",
     "        # preprocess_input() normalizes input in the scale of [-1, +1]\n",
     "        im_normalized = preprocess_input(im)\n",
-    "    return im, im_normalized\n",
-    "    "
+    "    return im, im_normalized"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below, I preprocessed one of my images to show how it is correctly cropping out just the face which will be fed into the VGGFace NN."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -329,8 +363,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The output of VGGFace is a 2622 dimensional vector. In order to compare faces, I'm going to use cosine similarity. Cosine similarity is a metric used to measure how similar to vectors are. Mathematically, it measures the cosine of the angle between two vectors projected in a multi-dimensional space. The smaller the angle, the higher the cosine similarity."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,8 +385,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Defining a Function to Compare Faces\n",
+    "Below, I create a function that takes two images as input. It first preprocesses the images by cropping out the face and resizing to the appropriate dimensions. Then it feeds each image separately into the VGGFace NN to get the image representation of both. Then it finds the cosine similarity between the two faces, which is used to determine whether the two faces are the same or not. Then I set a threshold `epsilon` to detemine whether the two faces are the same or not. If the cosine similarity is below epsilon, then the program outputs that they are the same person. Otherwise, the program outputs that they are not the same person. Finally, the program outputs both cropped images which were fed into the NN."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,8 +433,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Checking the Performance of the Program"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -538,12 +594,14 @@
    "metadata": {},
    "source": [
     "# Facial Recognition with One Shot Learning\n",
-    "Here's I'm going to extract the faces needed for my one-shot learning model. It will load 5 extracted faces."
+    "One shot learning is the process of a computer vision system looking at two images that it has never seen before and saying whether they represent the same object. One useful real-world application of this would be passport checks, where the AI could determine whether a person is the same as the image on their passport. \n",
+    "\n",
+    "Here, I'm going to extract 5 different faces from 5 pictures and then save them in a directory. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,8 +659,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below are the faces and names that I will use to feed into my one shot learning model."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -644,12 +709,12 @@
    "metadata": {},
    "source": [
     "# Testing model using my Webcam\n",
-    "This code looks up the faces that I extracted in the \"group_of_faces\" folder and uses Cosine Similarity to detect which face is most similar to the one being extracted from the webcam"
+    "In order to use this on my live webcam, I'm first going to need to get the vector representation of all 5 faces. That way I can compare the saved faces and names with any face that shows up on the webcam."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -700,8 +765,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below, I write a function to extract a face from the images taken in from my webcam. Then I get the vector representation of the face and compare it with the 5 saved faces saved through one shot learning. If one of the faces has a cosine similarity below 0.35 with one of the pictures, then the face is identified with the person's name. If none of them have a cosine similarity below 0.35, then the model puts the text \"unknown\" by the person's face."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,8 +824,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Final Result\n",
+    "Below is a screen capture of my program accurately identifying my face from the webcam!"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +874,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
